--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,5 @@ upload:
   only: *only
   cache: *cache
   script:
-  - ls -al
   - cd cache
-  - s3 sync . s3://energy-geoalert/
+  - aws s3 sync . s3://energy-geoalert/
