--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,7 @@ zip:
   only: *only
   script:
   - apk add --no-cache zip
+  - mkdir -p cache
   - cp files/index.xml cache/
   - cd src
   - zip -r ../cache/energy_geoalert_master_src.zip ./
